added contact_form and footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Dashboard UI</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp" />
+   <script 
+    src="https://kit.fontawesome.com/f320e72acb.js" 
+    crossorigin="anonymous">
+    </script>
 </head>
 <body>
   <!-- Navigation bar -->
@@ -13,7 +17,7 @@
     <ul>
      <a href="index.html"><li>Home</li></a>
      <a href=""><li>About</li></a>
-     <a href=""><li>Contact us</li></a>
+     <a href="/contactUs/index.html"><li>Contact us</li></a>
      <a href=""><li>Services</li></a>
 
     </ul>
@@ -337,6 +341,66 @@
 
     </div>
   </div>
+
+  <!-- footer section -->
+
+      <footer>
+        <div class="foot-sec">
+            <div class="logo">
+          <h2>Manage<span>X</span></h2>
+            </div>
+            <div class="main-link">
+                <h3>Main Link</h3>
+               <ul type="none">
+                <a href="analytics.html">
+                  <li>Sales Tracking</li>
+                  </a>
+                <a href="">
+                  <li>Expenses tracking</li>
+                  </a>
+                <a href="customer.html">
+                  <li>Income tracking</li>
+                  </a>
+                <a href="contactUs/index.html">
+                  <li>Contact Us</li>
+                  </a>
+                <a href="">
+                <li>News & Blogs</li>
+                </a>
+               </ul>
+            </div>
+            
+            <div class="main-link">
+                <h3>Supports</h3>
+               <ul type="none">
+                <li>About Us</li>
+                <li>Privacy Policy</li>
+                <li>Terms & Conditions</li>
+               </ul>
+            </div>
+
+            <div class="join">
+                <h3>Supports</h3>
+                <input type="email" placeholder="Ente your Email..">
+                <h3>Follows Us</h3>
+                
+                <div class="icon-container">
+                    <div class="icon">
+                        <i class="fa fa-facebook"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-Twitter"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-instagram"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <script src="script.js"></script>
 </body>
