added report class and utility styles

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h3>Products</h3>
         </a>
 
-        <a href="#">
+        <a href="report.html">
           <span class="material-symbols-sharp">report_gmailerrorred</span>
           <h3>Reports</h3>
         </a>
