--- a/analytics.html
+++ b/analytics.html
@@ -5,29 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Analytics Dashboard </title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="utility.css">
   <style>
-    *{
-      margin: 0;
-      padding: 0;
-    }
+
     body {
       font-family: Arial, sans-serif;
       background: #f5f5f5;
     }
-
-  nav ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding: 10px;
-  background-color: #95bfb1;
-  margin-bottom: 30px;
-}
-
-nav a {
-  text-decoration: none;
-  color: #000;
-}
 
     .dashboard {
       max-width: 700px;
@@ -37,11 +21,7 @@ nav a {
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2); 
     }
-    .dashboard h2{
-      color: #445c83d6;
-      font-weight: 600;
-      margin-bottom: 15px;
-    }
+   
     .metrics {
       display: flex;
       justify-content: space-around;
