--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <span class="msg_count">10</span>
         </a>
 
-        <a href="#">
+        <a href="./product/product.html">
           <span class="material-symbols-sharp">receipt_long</span>
           <h3>Products</h3>
         </a>
