--- a/report.html
+++ b/report.html
@@ -56,7 +56,7 @@
     </nav>
 
     <div class="dashboard">
-      <h2>Full Report Dashboard</h2>
+      <h2>Report overview</h2>
       <div class="metrics">
         <div class="metric">
           <h3>Total Reports</h3>
