--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h3>Analytics</h3>
         </a>
 
-        <a href="#">
+        <a href="messages.html">
           <span class="material-symbols-sharp">mail_outline</span>
           <h3>Messages</h3>
           <span class="msg_count">10</span>
