--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h3>Settings</h3>
         </a>
 
-        <a href="#">
+        <a href="addProduct.html">
           <span class="material-symbols-sharp">add</span>
           <h3>Add Product</h3>
         </a>
