--- a/messages.html
+++ b/messages.html
@@ -18,11 +18,13 @@
     }
     /* Sidebar */
     .sidebar {
+      background-color: #8fbc8f66;
+      margin: 60px 0px 20px 10px;
+      border-radius: 10px;
       width: 220px;
-      background: #fff;
       padding: 20px;
       min-height: 100vh;
-      box-shadow: 2px 0 10px rgba(0,0,0,0.05);
+      box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.4);
     }
     .sidebar a {
       display: flex;
@@ -35,14 +37,16 @@
       color: #333;
       text-decoration: none;
     }
+
     .sidebar a:hover {
-      background: #e0e0e0;
+      box-shadow: 0 3px 10px rgba(0,0,0,1.0);
     }
     .sidebar .material-symbols-sharp {
       font-size: 22px;
+      color: #6193a3f5;
     }
     .msg_count {
-      background: red;
+      background: rgba(244, 103, 103, 0.905);
       color: white;
       padding: 2px 8px;
       font-size: 12px;
@@ -55,17 +59,20 @@
     }
     .toggle-container {
       text-align: right;
+      font-size: 13px;
+      font-weight: 500;
     }
     .overview {
       margin: 20px 0;
       padding: 20px;
-      background: #fff;
+      background-color: #8fbc8f66;
       border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 3px 10px rgba(0,0,0,0.4);
     }
     .overview h2 {
       margin-bottom: 10px;
       font-size: 24px;
+      
     }
     .overview p {
       font-size: 16px;
@@ -79,9 +86,9 @@
     .card {
       flex: 1;
       padding: 20px;
-      background: #fff;
+      background: #a6b8db94;
       border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.4);
       text-align: center;
     }
     .card h3 {
@@ -93,17 +100,17 @@
       font-weight: bold;
     }
     canvas {
-      background: #fff;
+      background: #a6b8db94;
       border-radius: 12px;
       padding: 20px;
       margin-top: 20px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+      box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.4);
     }
     .message-list {
       margin-top: 30px;
-      background: #fff;
+      background: #a6b8db94;
       border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.4);
       padding: 20px;
     }
     .message {
@@ -171,6 +178,9 @@
     }
     body.dark-mode .message {
       border-color: #444;
+    }
+    body.dark-mode .overview p{
+      color: #fff;
     }
   </style>
 </head>
