--- a/addProduct.html
+++ b/addProduct.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      background-color: #8fbc8f66;
       margin: 0;
       padding: 20px;
     }
