--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h3>Reports</h3>
         </a>
 
-        <a href="#">
+        <a href="setting.html">
           <span class="material-symbols-sharp">settings</span>
           <h3>Settings</h3>
         </a>
@@ -79,7 +79,7 @@
           <h3>Add Product</h3>
         </a>
 
-        <a href="#">
+        <a href="logout.html">
           <span class="material-symbols-sharp">logout</span>
           <h3>Logout</h3>
         </a>
