--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="">
         <li>About</li>
       </a>
-      <a href="/contactUs/index.html">
+      <a href="/contactus.html">
         <li>Contact us</li>
       </a>
       <a href="">
